@@ -8,6 +8,7 @@ V.Next
 - [MINOR] Adds new API support for the broker - SSO token and flight support (#1290)
 - [MINOR] Elevates AndroidCommon Logger out of internal package (#1279)
 - [MINOR] Automate broker protocol version computation. (#1301)
+- [PATCH] Ensure the default connection service has a single callback instance (#1314)
 
 Version 3.2.0
 ----------
